--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
+.gitignore
+.vscode
 .vscode/tasks.json
+.projects/01_Beginner/01_couit_cin/main.exe
+.projects/01_Beginner/01_couit_cin/main.obj
+.projects/01_Beginner/01_couit_cin/main.pdb
+.projects/01_Beginner/01_couit_cin/vc140.pdb
